release: prepare 0.1.1
